<package>
  <name>choreonoid_ros</name>
  <version>1.5.0</version>
  <description>
Choreonoid - An integrated graphical robotics software framework

Copyright (c) 2007-2014 Shin'ichiro Nakaoka
Copyright (c) 2007-2014 National Institute of
                        Advanced Industrial Science and Technology (AIST)

Choreonoid is software released under the MIT license.

Permission is hereby granted, free of charge, to any person obtaining a copy
of this software and associated documentation files (the "Software"), to deal
in the Software without restriction, including without limitation the rights
to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
copies of the Software, and to permit persons to whom the Software is
furnished to do so, subject to the following conditions:

The above copyright notice and this permission notice shall be included in
all copies or substantial portions of the Software.

THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
THE SOFTWARE

---------------------------------------------------------------------------

Third-part libraries bundled with the Choreonoid source distribution:

    * IJG JPEG Library (http://www.ijg.org/)
        see thirdparty/Jpeg-6b/README

    * libpng (http://www.libpng.org/pub/png/libpng.html)
        see thirdparty/lpng1232/LICENSE

    * LibYAML (http://pyyaml.org/wiki/LibYAML)
        MIT license (see thirdparty/yaml-0.1.3/LICENSE)

    * zlib (http://zlib.net/)
        see thirdparty/zlib123/README

    * GLEW (http://glew.sourceforge.net/)
        see thirdparty/glew-1.9.0/LICENSE.txt

    * irrXML (http://www.ambiera.com/irrxml/)
        see thirdparty/irrxml-1.2/readme.txt

    * OPCODE (http://www.codercorner.com/Opcode.htm)
        see src/AISTCollisionDetector/Opcode/ReadMe.txt

    * gettext (http://www.gnu.org/software/gettext/)
        see thirdparty/windows/include/libintl.h


---------------------------------------------------------------------------

Some binary distributions of Choreonoid may include the binaries of the
following libraries:

* Boost C++ Libraries (http://www.boost.org/)
* Qt (http://qt-project.org/)
* Eigen (http://eigen.tuxfamily.org/)
* Open Dynamics Engine (http://www.ode.org/)
* Bullet Physics Library (http://bulletphysics.org/)
* omniORB (http://omniorb.sourceforge.net/)
* OpenRTM-aist (http://openrtm.org/)
  </description>
  <maintainer email="f-kanehiro@aist.go.jp">Fumio Kanehiro</maintainer>

  <license>MIT</license>

  <url type="website">http://choreonoid.org/</url>
  <url type="bugtracker">https://github.com/s-nakaoka/choreonoid/issues</url>
  <url type="repository">https://github.com/s-nakaoka/choreonoid</url>

  <author>Shin'ichiro Nakaoka and Choreonoid Development Team, AIST.</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cmake</build_depend>
  <build_depend>boost</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>qtbase5-dev</build_depend>
  <build_depend>libqt5-opengl-dev</build_depend>
  <build_depend>libqt5x11extras5-dev</build_depend>
  <build_depend>qt5-qmake</build_depend>
  <build_depend>assimp-dev</build_depend>
  <build_depend>libglew-dev</build_depend>
  <build_depend>yaml</build_depend>
  <build_depend>zlib</build_depend>
  <build_depend>libjpeg</build_depend>
  <build_depend>libpng12-dev</build_depend>
  <build_depend>opende</build_depend>
  <build_depend>omniorb</build_depend>
  <build_depend>python-omniorb</build_depend>
  <build_depend>libgstreamer0.10-dev</build_depend>
  <build_depend>libgstreamer-plugins-base0.10-dev</build_depend>
  <build_depend>libpulse-dev</build_depend>
  <build_depend>libsndfile1-dev</build_depend>
  <build_depend>python</build_depend>
  <build_depend>python-numpy</build_depend>
  <build_depend>uuid</build_depend>

  <build_depend>doxygen</build_depend>
  <build_depend>mk</build_depend>

  <run_depend>yaml</run_depend>
  <run_depend>libqt5-core</run_depend>
  <run_depend>libqt5-gui</run_depend>
  <run_depend>libqt5-widgets</run_depend>
  <run_depend>libqt5-network</run_depend>
  <run_depend>libqt5-opengl</run_depend>
  <run_depend>assimp</run_depend>
  
  <export>
  </export>
</package>
